<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="196dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="134dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_a" />

            <Button
                android:id="@+id/a_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_aminus" />

            <Button
                android:id="@+id/b_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_bplus" />

            <Button
                android:id="@+id/b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_b" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/b_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_bminus" />

            <Button
                android:id="@+id/c_plus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/btn_cplus" />

            <Button
                android:id="@+id/c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_c" />

            <Button
                android:id="@+id/c_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_cminus" />

        </LinearLayout>


        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/d_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_dplus" />

            <Button
                android:id="@+id/d"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/btn_d" />

            <Button
                android:id="@+id/e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_e" />

            <Button
                android:id="@+id/fail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_f" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>